# flick

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODOS.md  grammar.txt  sample_program.fl
.github/workflows/: build.yml  cargo-test.yml
examples/: README.md  arithemetic.fl  bad.fl  bad_strs.fl  basic_ir_test.fl  bool.fl  comments.fl  extend.fl  extern.fl  factorial.fl  floats.fl  hello_world.fl  if_test.fl  inline_comments.fl  modulo.fl  negate.fl  negative_numbers.fl  print.fl  print_fib.fl  printnum.fl  return_in_while_loop.fl  simple_while_loop.fl  strings.fl  sum.fl  test.fl  unsigned_ints.fl  variables.fl  zero_extend.fl
hooks/: prepare-commit-msg
proptest-regressions/token/: tokens.txt
sample_programs/: basic_ir_test.fl  factorial.fl  one_liner.fl  sample_program.fl  simple_while_loop.fl
src/: ast.rs  ast_parser.rs  compiler.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  program.rs  scope_manager.rs  source_file.rs  token.rs  types.rs
src/compilation/: compiler.rs  mod.rs  scope_manager.rs
src/compiler/: compiler.rs  mod.rs  scope_manager.rs
src/lexer/: error.rs  lexer.rs  location.rs  mod.rs  source_iterator.rs  token.rs  tokens.rs
src/lexing/: error.rs  lexer.rs  mod.rs  token.rs
src/parser/: ast.rs  mod.rs  parser.rs
src/parsing/: ast.rs  mod.rs  parser.rs
src/token/: mod.rs  token.rs  tokens.rs
src/tokenization/: mod.rs  token.rs  tokens.rs
src/typing/: mod.rs  typed_ast.rs  typer.rs
