[package]
name = "flick"
version = "0.1.0"
authors = ["Max Larsson <maxslarsson@gmail.com>", "Thomas Breydo <tbreydo@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/flick-lang/flick"
homepage = "https://github.com/flick-lang/flick"
description = "The Flick Programming Language"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true

[dependencies]
anyhow = { version = "1.0.75", optional = true }
clap = { version = "4.4.8", features = ["derive"], optional = true }
llvm-sys = "170.0.0"

[features]
default = ["binary"]
binary = ["anyhow", "clap"]
